--- a/styles/index.scss
+++ b/styles/index.scss
@@ -4,7 +4,6 @@
 @import 'about';
 @import 'headline.scss';
 @import 'footer.scss';
-@import 'common.scss';
 @import 'customers.scss';
 @import 'features.scss';
 @import 'inbox.scss';
@@ -13,6 +12,7 @@
 @import 'feedback.scss';
 @import 'hiring.scss';
 @import 'order.scss';
+@import 'tips.scss';
 
 body {
   display: flex;
