--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -20,10 +20,27 @@ $bc-color-pink: #f3c6bd;
 $border-color: #2b292d3b;
 $burger-btn-color: #2c3241a4;
 $burger-btn-color-active: $text-color-active-learbtn;
-$sm: 400px;
+$md: 650px;
+$sm: 450px;
+$fs: 1300px;
 
+@mixin for-feature-section {
+  @media screen and (max-width: $fs) {
+    @content;
+  }
+}
 @mixin for-large-up {
-  @media screen and (min-width: 540px) {
+  @media screen and (min-width: $md) {
+    @content;
+  }
+}
+@mixin for-medium-up {
+  @media screen and (min-width: $sm) {
+    @content;
+  }
+}
+@mixin for-small-up {
+  @media screen and (max-width: $md) {
     @content;
   }
 }
@@ -32,8 +49,14 @@ $maxWidth: 1400;
 @mixin adaptiv-font($pcSize, $mobSize) {
   $addSize: $pcSize - $mobSize;
   $maxWidth: $maxWidth - 320;
-
   font-size: calc(
+    #{$mobSize + px} + #{$addSize} * ((100vw - 320px) / #{$maxWidth})
+  );
+}
+@mixin adaptiv-width($pcSize, $mobSize) {
+  $addSize: $pcSize - $mobSize;
+  $maxWidth: $maxWidth - 320;
+  width: calc(
     #{$mobSize + px} + #{$addSize} * ((100vw - 320px) / #{$maxWidth})
   );
 }
@@ -41,7 +64,6 @@ $maxWidth: 1400;
 @mixin adaptiv-margin-right($pcSize, $mobSize) {
   $addSize: $pcSize - $mobSize;
   $maxWidth: $maxWidth - 320;
-
   margin-right: calc(
     #{$mobSize + px} + #{$addSize} * ((100vw - 320px) / #{$maxWidth})
   );
@@ -50,7 +72,6 @@ $maxWidth: 1400;
 @mixin adaptiv-padding-top($pcSize, $mobSize) {
   $addSize: $pcSize - $mobSize;
   $maxWidth: $maxWidth - 320;
-
   padding-top: calc(
     #{$mobSize + px} + #{$addSize} * ((100vw - 320px) / #{$maxWidth})
   );
@@ -59,8 +80,14 @@ $maxWidth: 1400;
 @mixin adaptiv-padding-bottom($pcSize, $mobSize) {
   $addSize: $pcSize - $mobSize;
   $maxWidth: $maxWidth - 320;
-
   padding-bottom: calc(
     #{$mobSize + px} + #{$addSize} * ((100vw - 320px) / #{$maxWidth})
+  );
+}
+@mixin adaptiv-padding-right($pcSize, $mobSize) {
+  $addSize: $pcSize - $mobSize;
+  $maxWidth: $maxWidth - 560;
+  padding-right: calc(
+    #{$mobSize + px} + #{$addSize} * ((100vw - 560px) / #{$maxWidth})
   );
 }
