--- a/styles.css
+++ b/styles.css
@@ -789,6 +789,7 @@ button {
 }
 @media screen and (min-width: 650px) {
   .customers__list-items {
+    flex: auto;
     justify-content: space-between;
     width: 100%;
     border-bottom: none;
@@ -838,8 +839,14 @@ button {
   }
 }
 .customers_feedback {
-  padding-top: 43px;
-  padding-bottom: 76px;
+  padding-top: 0;
+  padding-bottom: 39px;
+}
+@media screen and (min-width: 650px) {
+  .customers_feedback {
+    padding-top: 43px;
+    padding-bottom: 76px;
+  }
 }
 
 .features {
@@ -1012,6 +1019,9 @@ button {
   }
 }
 .inbox__img-decor {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   margin-bottom: 42px;
   max-width: 100%;
 }
@@ -1209,6 +1219,9 @@ button {
   }
 }
 .communication__decor {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   margin-bottom: 40px;
 }
 @media screen and (min-width: 650px) {
@@ -1283,35 +1296,72 @@ button {
 }
 
 .audience {
-  padding-top: 110px;
-  padding-bottom: 110px;
+  padding-top: calc(
+    50px + 60 * ((100vw - 320px) / 1080)
+  );
+  padding-bottom: calc(
+    50px + 60 * ((100vw - 320px) / 1080)
+  );
   background-color: rgba(0, 161, 198, 0.137254902);
+}
+@media screen and (min-width: 650px) {
+  .audience {
+    padding-top: 110px;
+    padding-bottom: 110px;
+  }
 }
 .audience__top {
   margin: 0 auto;
-  margin-bottom: 111px;
+  margin-bottom: 0;
   max-width: 555px;
   text-align: center;
 }
+@media screen and (min-width: 650px) {
+  .audience__top {
+    margin-bottom: 111px;
+  }
+}
 .audience__subtitle {
-  margin-bottom: 24px;
+  margin-bottom: 17px;
   font-size: 22px;
   line-height: 34px;
 }
+@media screen and (min-width: 650px) {
+  .audience__subtitle {
+    margin-bottom: 24px;
+  }
+}
 .audience__title {
-  margin-bottom: 30px;
+  margin-bottom: 18px;
   letter-spacing: -0.5px;
 }
+@media screen and (min-width: 650px) {
+  .audience__title {
+    margin-bottom: 30px;
+  }
+}
 .audience__text {
-  margin-bottom: 34px;
+  margin-bottom: 30px;
   font-size: 24px;
   line-height: 34px;
 }
+@media screen and (min-width: 650px) {
+  .audience__text {
+    margin-bottom: 34px;
+  }
+}
 .audience__bottom {
   display: flex;
+  flex-direction: column;
+  align-items: center;
   justify-content: space-between;
   margin: 0;
   padding: 0;
+}
+@media screen and (min-width: 650px) {
+  .audience__bottom {
+    flex-direction: row;
+  }
 }
 .audience__item {
   display: flex;
@@ -1321,12 +1371,21 @@ button {
   width: 262px;
   height: 300px;
   background-color: #fff;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.1), 0px 4px 6px rgba(0, 0, 0, 0.05), inset 0px 1px 0px rgba(255, 255, 255, 0.1);
   border-radius: 8px;
   transition: background-color 0.5s;
   cursor: pointer;
 }
 .audience__item:hover {
   background-color: #3141c5;
+}
+.audience__item:not(:last-child) {
+  margin-bottom: 15px;
+}
+@media screen and (min-width: 650px) {
+  .audience__item:not(:last-child) {
+    margin-bottom: 0;
+  }
 }
 .audience__img {
   padding-bottom: 16px;
@@ -1338,7 +1397,27 @@ button {
 }
 
 .audience-button {
-  margin-right: 10px;
+  margin-right: 0;
+  margin-bottom: 12px;
+  width: 100%;
+}
+@media screen and (min-width: 650px) {
+  .audience-button {
+    width: 160px;
+    margin-right: 10px;
+    margin-bottom: 0;
+  }
+}
+
+.audience-learn-more-button {
+  margin-bottom: 40px;
+  width: 100%;
+}
+@media screen and (min-width: 650px) {
+  .audience-learn-more-button {
+    margin-bottom: 0;
+    width: auto;
+  }
 }
 
 .feedback {
