--- a/styles/audience.scss
+++ b/styles/audience.scss
@@ -1,37 +1,58 @@
 @import 'variables';
 .audience {
-  padding-top: 110px;
-  padding-bottom: 110px;
+  @include adaptiv-padding-top(110, 50);
+  @include adaptiv-padding-bottom(110, 50);
   background-color: $bc-color-lightskyblue;
+  @include for-large-up {
+    padding-top: 110px;
+    padding-bottom: 110px;
+  }
 
   &__top {
     margin: 0 auto;
-    margin-bottom: 111px;
+    margin-bottom: 0;
     max-width: 555px;
     text-align: center;
+    @include for-large-up {
+      margin-bottom: 111px;
+    }
   }
 
   &__subtitle {
-    margin-bottom: 24px;
+    margin-bottom: 17px;
     font-size: 22px;
     line-height: 34px;
+    @include for-large-up {
+      margin-bottom: 24px;
+    }
   }
 
   &__title {
-    margin-bottom: 30px;
+    margin-bottom: 18px;
     letter-spacing: -0.5px;
+    @include for-large-up {
+      margin-bottom: 30px;
+    }
   }
   &__text {
-    margin-bottom: 34px;
+    margin-bottom: 30px;
     font-size: 24px;
     line-height: 34px;
+    @include for-large-up {
+      margin-bottom: 34px;
+    }
   }
 
   &__bottom {
     display: flex;
+    flex-direction: column;
+    align-items: center;
     justify-content: space-between;
     margin: 0;
     padding: 0;
+    @include for-large-up {
+      flex-direction: row;
+    }
   }
 
   &__item {
@@ -42,11 +63,19 @@
     width: 262px;
     height: 300px;
     background-color: $bc-color-white;
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.1), 0px 4px 6px rgba(0, 0, 0, 0.05),
+      inset 0px 1px 0px rgba(255, 255, 255, 0.1);
     border-radius: 8px;
     transition: background-color 0.5s;
     cursor: pointer;
     &:hover {
       background-color: $bc-color-accent;
+    }
+    &:not(:last-child) {
+      margin-bottom: 15px;
+      @include for-large-up {
+        margin-bottom: 0;
+      }
     }
   }
 
@@ -62,5 +91,20 @@
 }
 
 .audience-button {
-  margin-right: 10px;
+  margin-right: 0;
+  margin-bottom: 12px;
+  width: 100%;
+  @include for-large-up {
+    width: 160px;
+    margin-right: 10px;
+    margin-bottom: 0;
+  }
+}
+.audience-learn-more-button {
+  margin-bottom: 40px;
+  width: 100%;
+  @include for-large-up {
+    margin-bottom: 0;
+    width: auto;
+  }
 }
