--- a/styles/communication.scss
+++ b/styles/communication.scss
@@ -77,6 +77,9 @@
   }
 
   &__decor {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     margin-bottom: 40px;
     @include for-large-up {
       margin-bottom: 0;
