--- a/styles/customers.scss
+++ b/styles/customers.scss
@@ -14,7 +14,6 @@
     padding: 0;
     list-style: none;
     @include for-large-up {
-      // justify-content: center;
       flex-wrap: nowrap;
     }
   }
@@ -25,6 +24,7 @@
     flex: 1;
     border-bottom: 1px solid $border-color;
     @include for-large-up {
+      flex: auto;
       justify-content: space-between;
       width: 100%;
       border-bottom: none;
@@ -65,7 +65,11 @@
   }
 
   &_feedback {
-    padding-top: 43px;
-    padding-bottom: 76px;
+    padding-top: 0;
+    padding-bottom: 39px;
+    @include for-large-up {
+      padding-top: 43px;
+      padding-bottom: 76px;
+    }
   }
 }
