--- a/styles/feedback.scss
+++ b/styles/feedback.scss
@@ -2,27 +2,39 @@
 
 .feedback {
   position: relative;
-  padding-bottom: 104px;
+  padding-bottom: 50px;
   border-bottom: 1px solid #0000001a;
+  @include for-large-up {
+    padding-bottom: 104px;
+  }
 
   &__subtitle {
-    text-align: center;
+    text-align: left;
     margin-bottom: 28px;
     font-weight: 700;
     font-size: 24px;
     line-height: 30px;
     color: $text-color-blue;
+    @include for-large-up {
+      text-align: center;
+    }
   }
   &__decor-img {
-    position: absolute;
-    bottom: 0;
-    right: 0;
     display: block;
+    @include for-large-up {
+      position: absolute;
+      bottom: 0;
+      right: 0;
+    }
   }
 }
 .feedback-slider {
   max-width: 750px;
   margin: auto;
+  margin-bottom: 92px;
+  @include for-large-up {
+    margin-bottom: 0;
+  }
 
   &__item {
     text-align: center;
@@ -73,6 +85,10 @@
   margin-bottom: 34px;
   font-size: 24px;
   line-height: 34px;
+  text-align: left;
+  @include for-large-up {
+    text-align: center;
+  }
 }
 
 .cite-inner-feedback {
