--- a/styles.css
+++ b/styles.css
@@ -1528,8 +1528,12 @@ button {
 }
 
 .hiring {
-  padding-top: 106px;
-  padding-bottom: 110px;
+  padding-top: calc(
+    50px + 56 * ((100vw - 320px) / 1080)
+  );
+  padding-bottom: calc(
+    50px + 60 * ((100vw - 320px) / 1080)
+  );
 }
 .hiring__inner {
   margin: auto;
@@ -1541,21 +1545,31 @@ button {
   text-align: center;
 }
 .hiring__title {
-  margin-bottom: 20px;
+  margin-bottom: 18px;
+}
+@media screen and (min-width: 650px) {
+  .hiring__title {
+    margin-bottom: 20px;
+  }
 }
 .hiring__about-text {
   padding-top: 3px;
-  margin-bottom: 38px;
+  margin-bottom: 30px;
   font-size: 24px;
   line-height: 34px;
+}
+@media screen and (min-width: 650px) {
+  .hiring__about-text {
+    margin-bottom: 38px;
+  }
 }
 .hiring__link {
   display: flex;
   align-items: center;
   justify-content: center;
   margin: auto;
-  margin-bottom: 110px;
-  width: 247px;
+  margin-bottom: 39px;
+  width: 100%;
   height: 48px;
   font-weight: 700;
   font-size: 18px;
@@ -1564,6 +1578,12 @@ button {
   color: #fff;
   background-color: #3040c4;
   transition: all 0.5s;
+}
+@media screen and (min-width: 650px) {
+  .hiring__link {
+    margin-bottom: 110px;
+    width: 247px;
+  }
 }
 .hiring__link:hover {
   color: #fff;
@@ -1576,15 +1596,38 @@ button {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.5);
 }
 
+.vacancy-block__inner {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: flex-start;
+  padding-left: 20px;
+  width: 100%;
+}
+@media screen and (min-width: 650px) {
+  .vacancy-block__inner {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    padding-left: 0;
+    width: 100%;
+  }
+}
 .vacancy-block__item {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 26px;
+  padding: 0;
   border: 1px solid rgba(43, 41, 45, 0.231372549);
   border-radius: 8px;
   cursor: pointer;
   transition: all 0.2s;
+}
+@media screen and (min-width: 650px) {
+  .vacancy-block__item {
+    padding: 26px;
+  }
 }
 .vacancy-block__item:not(:last-child) {
   margin-bottom: 17px;
@@ -1600,14 +1643,48 @@ button {
   color: #fff;
 }
 .vacancy-block__title {
+  margin-bottom: 14px;
+  max-width: 200px;
   font-size: 22px;
   line-height: 28px;
 }
+@media screen and (min-width: 650px) {
+  .vacancy-block__title {
+    margin-bottom: 0;
+    max-width: 100%;
+  }
+}
 .vacancy-block__text {
-  margin-left: auto;
-  margin-right: 5px;
-  flex-basis: 250px;
+  margin-left: 0;
+  margin-right: 0;
+  flex-basis: none;
   color: rgba(43, 41, 45, 0.6);
+}
+@media screen and (min-width: 650px) {
+  .vacancy-block__text {
+    margin-left: auto;
+    margin-right: 5px;
+    flex-basis: 250px;
+    text-align: center;
+  }
+}
+.vacancy-block__button-inner {
+  height: 140px;
+  background-color: #d5d4d5;
+  display: flex;
+  align-items: center;
+  flex-basis: 50px;
+  justify-content: center;
+  border-radius: 0 8px 8px 0;
+}
+@media screen and (min-width: 650px) {
+  .vacancy-block__button-inner {
+    justify-content: end;
+    height: 100%;
+    background-color: transparent;
+    flex-basis: none;
+    border-radius: 0;
+  }
 }
 .vacancy-block__btn {
   border: 0;
